# openlaunch

./: .gitignore  BUILD-FIX.md  Cargo.toml  LICENSE  OPENGOLFSIM-INTEGRATION.md  README-RUST.md  README.md  SETUP-WINDOWS.md  TESTING.md  WINDOWS-BUILD.md  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
docs/: raspberry-pi-setup.md  yolo-performance-tuning.md
scripts/: OpenLaunch.desktop  calibrate_camera.py  openlaunch.service  start-kiosk.sh  test_yolo_detection.py
src/: launch_monitor.rs  main.rs  mock_radar.rs  opengolfsim.rs  ops243.rs  shot.rs
src/openlaunch/: camera_tracker.py  launch_monitor.py  ops243.py  server.py
tests/: __init__.py  test_camera.py  test_launch_monitor.py  test_ops243.py  test_server.py
ui/src/: App.css  App.tsx  index.css
ui/src/components/: ClubPicker.css  ClubPicker.tsx  ConnectionStatus.css  ConnectionStatus.tsx  ShotDisplay.css  ShotDisplay.tsx  ShotHistory.css  ShotHistory.tsx  ShotList.css  ShotList.tsx  StatsView.tsx
ui/src/hooks/: useSocket.ts
ui/src/types/: shot.ts
