[project]
name = "openlaunch"
version = "0.1.0"
description = "DIY golf launch monitor using Raspberry Pi and Doppler radar"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "OpenLaunch Contributors" }
]
keywords = ["golf", "launch-monitor", "doppler", "radar", "raspberry-pi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
# Raspberry Pi specific packages (install on Pi only)
pi = [
    "spidev>=3.5",
    "RPi.GPIO>=0.7.0",
]
# Phase 2: Camera support
camera = [
    "opencv-python>=4.5.0",
    "picamera2>=0.3.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
openlaunch = "launch_monitor:main"
openlaunch-diagnose = "diagnose:main"

[project.urls]
Homepage = "https://github.com/yourusername/openlaunch"
Repository = "https://github.com/yourusername/openlaunch"
Issues = "https://github.com/yourusername/openlaunch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
